--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,5 +3,56 @@
 /*
 paleta de Cores
 Verde: #49a09d
-lilás: #C5f2c82
+lilás: #5f2c82
 */
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50px;
+    left: 100px;
+    transform: translate(-50% -50%);
+    overflow: hidden;
+
+    background-color: white;
+    height: 500px;
+    width: 250px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+}
+section#login > div#imagem {
+    display: block;
+
+    /*Lembra de colocar a imagem baixada do google qui como substituto dessa embaixo*/
+
+    background-image: #5f2c82 url(../imagens/paisagem5.webp) no-reapeat;
+    background-image: cover;
+    background-position: left bottom;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
