Fim do modulo 4

--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,13 +3,14 @@
 
 
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {/*Configuraões para tablets*/
     body{
         background-image: linear-gradient(to top, #49a09d);
     }
 
     section#login{
         width: 80vw;
+        height: 280px;
     
     }
 
@@ -25,12 +26,13 @@
 }
 
     @media screen and (min-width: 992px) {
-        body{
+        body{ /*Configuraões para tablets*/
         background-image: linear-gradient(to top, #49a09d);
     }
 
         section#login{
             width: 950px;
+            height: 350px;
         }
 
         section#login > div#imagem {
@@ -46,6 +48,7 @@
 
 
         div#formulario > p {
-            font-size: 1.2em;
+            font-size: 1em;
+            margin: 10px 0px;
         }
     }
