--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,15 +29,14 @@ section#login{
     position: absolute;
     top: 50px;
     left: 100px;
-    transform: translate(-50% -50%);
     overflow: hidden;
-
     background-color: white;
     height: 515px;
     width: 250px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50% -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -70,15 +69,38 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > i{
+    color: white;
+   /* background-color: black;*/
+}
+
+div.campo > input{
+    background-color: rgb(160, 221, 221);
+    font-size: 1emp;
+    width: calc(100%-44px);
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+    /*transform: translateY(-10px); não é necessário pra min*/
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit] {
